Refactor data loading paths and update prediction logic in electronics_dashboard.py; clean up requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,6 @@
-geopandas==0.14.4
+streamlit==1.51.0
+pandas==2.3.3
+numpy==2.3.5
 lightgbm==4.6.0
-matplotlib-inline==0.1.7
-matplotlib-venn==1.1.2
-matplotlib==3.7.2
-numpy==1.26.4
-pandas-datareader==0.10.0
-pandas-gbq==0.29.2
-pandas-profiling==3.6.6
-pandas-stubs==2.2.2.240909
-pandas==2.2.3
-pandasql==0.7.3
-plotly-express==0.4.1
-plotly==5.24.1
-prophet==1.1.7
-scikit-learn-intelex==2025.9.0
-scikit-learn==1.2.2
-seaborn==0.12.2
-sklearn-pandas==2.2.0
-statsmodels==0.14.5
+scikit-learn==1.7.2
+plotly==6.5.0
